--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Cloud Community Day 2025 - The flagship annual gathering of cloud professionals"
+      content="Cloud Community Day Kolkata 2025 - The flagship annual gathering of cloud professionals"
     />
     <meta
       name="keywords"
@@ -13,7 +13,7 @@
     />
     <meta name="author" content="GDG Cloud Kolkata" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <title>Cloud Community Day 2025</title>
+    <title>Cloud Community Day Kolkata 2025</title>
   </head>
   <body>
     <div id="root"></div>
